[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = tess
description = Tessellation and image segmentation tools for astronomy
long_description = 
author = Jonathan Sick
author_email = jonathansick@mac.com
license = BSD
url = http://github.com/jonathansick/tess
edit_on_github = False
github_project = jonathansick/tess
